Address https://rt.cpan.org/Ticket/Display.html?id=47401

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.57  Sat, Sep 19, 2009
+  - Enhancements to MANIFEST.SKIP from Module::Build:
+     http://rt.cpan.org/Ticket/Display.html?id=47401
+
 1.56  Sun, Jan 4, 2009
   - Add support for VMS in Unix or extended character set mode:
      https://rt.cpan.org/Ticket/Display.html?id=42146
