--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.58  Sun, Nov 21, 2009
+  - add MYMETA files to default skip list:
+     http://rt.cpan.org/Ticket/Display.html?id=50923
+
 1.57  Sat, Sep 19, 2009
   - Enhancements to MANIFEST.SKIP from Module::Build:
      http://rt.cpan.org/Ticket/Display.html?id=47401
